--- a/css/product-tables.css
+++ b/css/product-tables.css
@@ -25,7 +25,7 @@ div.select-table:hover{
     background-color: rgba(131, 197, 241, 0.582);
     cursor: pointer;
 }
-table.table{
+.table{
     width: 100%;
     height: calc(100% - 50px);
     border-bottom-left-radius: 30px;
@@ -51,7 +51,7 @@ table.tag-table>thead>th>td,table.tag-table>tbody>tr>td{
     width: calc(100%/5);
     text-align: center;
 }
-table.product-table>thead>th>td,table.product-table>tbody>tr>td{
+table>thead>th>td,table>tbody>tr>td{
     width: calc(100%/5);
     text-align: center;
 }
